# icfpc-2023

./: .gitignore  Icfpc2023.sln  Icfpc2023.sln.DotSettings  LICENSE.md  README.md  derivs_helper.jl  lambda_score.py  plot.py
Icfpc2023/: Converter.fs  DirectoryLookup.fs  Domain.fs  DummySolver.fs  Geometry.fs  HttpApi.fs  Icfpc2023.fsproj  IterativeScoring.fs  JsonDefs.fs  LambdaScore.fs  LambdaScoring.fs  Program.fs  Scoring.fs  Scoring.txt
Icfpc2023.Tests/: Icfpc2023.Tests.fsproj  Tests.fs
Icfpc2023.Visualizer/: App.axaml  App.axaml.fs  Icfpc2023.Visualizer.fsproj  Program.fs  ViewLocator.fs  app.manifest
examples/: 1.ini  10.ini  11.ini  12.ini  12.ini.new  13.ini  14.ini  15.ini  16.ini  17.ini  19.ini  2.ini  20.ini  21.ini  21.ini.new  22.ini  23.ini  23.ini.new  24.ini  24.ini.new  25.ini  26.ini  27.ini  28.ini  29.ini  3.ini  30.ini  31.ini  32.ini  33.ini  34.ini  35.ini  36.ini  37.ini  38.ini  39.ini  4.ini  40.ini  41.ini  42.ini  (+56 more)
icfpc2023.Fortran/: CMakeLists.txt
icfpc2023.Fortran/examples/: test.ini
icfpc2023.Fortran/src/: CMakeLists.txt  Vec2D.f90  domain.f90  grid.f90  guess.f90  line.f90  main.f90  reduce.f90
problems/: 1.json  10.json  11.json  12.json  13.json  14.json  15.json  16.json  17.json  2.json  20.json  21.json  22.json  23.json  24.json  25.json  26.json  27.json  28.json  29.json  3.json  30.json  31.json  33.json  34.json  35.json  36.json  37.json  38.json  39.json  4.json  40.json  41.json  42.json  43.json  44.json  45.json  46.json  47.json  48.json  (+46 more)
py/: .gitignore  domain.py  main.py  scoring.py  solving.py  storage.py  (+1 more)
(+253 files in other folders)
